2010-10-12  James Robinson  <jamesr@chromium.org>

        Reviewed by Nate Chapin (in person).

        Fix chromium compile.

        * src/WebPageSerializerImpl.cpp:
        (WebKit::WebPageSerializerImpl::WebPageSerializerImpl):
        (WebKit::WebPageSerializerImpl::serialize):

2010-10-12  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Gavin Barraclough.

        Unify JSC::StringBuilder & WebCore::StringBuilder
        https://bugs.webkit.org/show_bug.cgi?id=47538

        * src/LocalizedStrings.cpp:
        (WebCore::imageTitle): Use WTF::StringBuilder.
        * src/WebEntities.cpp:
        (WebKit::WebEntities::convertEntitiesInString): Ditto.
        * src/WebPageSerializerImpl.cpp: Remove useless includes.
        (WebKit::WebPageSerializerImpl::encodeAndFlushBuffer): 
        * src/WebPageSerializerImpl.h: Use WTF::StringBuilder.

2010-10-07  Stephen White  <senorblanco@chromium.org>

        Reviewed by James Robinson.

        [chromium] Zero-out all textures created via WebGraphicsContext3DDefaultImpl::texImage2D().
        https://bugs.webkit.org/show_bug.cgi?id=47178
        
        Covered by fast/canvas/toDataURL-alpha.html, when run with --accelerated-2d-canvas.

        * src/WebGraphicsContext3DDefaultImpl.cpp:
        (WebKit::bytesPerComponent):
        (WebKit::componentsPerPixel):
        (WebKit::imageSizeInBytes):
        (WebKit::WebGraphicsContext3DDefaultImpl::texImage2D):

2010-10-12  Dave Moore  <davemoore@chromium.org>

        Reviewed by Tony Chang.

        Use new WebThemeEngine api on chromium / linux to draw scrollbars.
        https://bugs.webkit.org/show_bug.cgi?id=47473

        * public/WebThemeEngine.h: Removed.
        * chromium/src/ChromiumBridge.cpp:

2010-10-11  Daniel Cheng  <dcheng@chromium.org>

        Reviewed by Tony Chang.

        [chromium] Prepare Clipboard/DragData for transition to new drag-and-drop interface.
        https://bugs.webkit.org/show_bug.cgi?id=44992
